@@ -1,3 +1,15 @@
+2002-08-06  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/add_window.c (destroy_window):
+	* fvwm/stack.c (is_on_top_of_layer_ignore_rom):
+	* fvwm/focus.c (focus_grab_buttons):
+	fixed core dump
+
+2002-08-05  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* libs/Bindings.c (AddBinding):
+	fixed handling of "unknown" modifiers in key bindings
+
 2002-08-02  Mikhael Goikhman  <migo@homemail.com>
 
 	* NEWS:
